--- a/16-sinatra-forms-CUD/early_two_thousand_jams/app/views/index.erb
+++ b/16-sinatra-forms-CUD/early_two_thousand_jams/app/views/index.erb
@@ -4,6 +4,10 @@
   <% @songs.each do |song| %>
     <div class='song'>
       <h3> <%= song.title %></></h3>
+      <img src="<%= song.img_url %>" alt=<%= song.title %>>
+      <h6>Artist: <%= song.artist %></h6>
+      <h6>Genre: <%= song.genre %></h6>
+      <h6>Release Year: <%= song.release_year %></h6>
     </div>
   <% end %>
 </div>
