--- a/20-rails-associations/movie_magic/app/assets/stylesheets/movies.scss
+++ b/20-rails-associations/movie_magic/app/assets/stylesheets/movies.scss
@@ -69,7 +69,7 @@ h6  {
 }
 
 
-.show-body {
+.show-body, form {
   background-color: rgba(255, 255, 255, 0.7);
   border-radius: 20px;
   margin: 0px auto;
