--- a/20-rails-associations/movie_magic/app/views/movies/edit.html.erb
+++ b/20-rails-associations/movie_magic/app/views/movies/edit.html.erb
@@ -1,17 +1,3 @@
 <h1> EDIT MOVIE </h1>
 
-<%= form_for @movie do |f| %>
-  <%= f.label :title%>
-  <%= f.text_field :title %>
-
-  <%= f.label :overview%>
-  <%= f.text_field :overview %>
-
-  <%= f.label :release_year%>
-  <%= f.number_field :release_year %>
-  
-  <%= f.text_field :imag_url %>
-  <%= f.label :imag_url %>
-
-  <%= f.submit  %>
-<% end %>
+<%= render "form" %>
