--- a/21-rails-validations/movie_magic/app/views/movies/_form.html.erb
+++ b/21-rails-validations/movie_magic/app/views/movies/_form.html.erb
@@ -1,3 +1,11 @@
+
+<% if flash[:errors] %>
+  <% flash[:errors].each do |message| %>
+    <p style="color: white;"> <%= message %> </p>
+  <% end%>
+<% end%>
+
+
 <%= form_for @movie do |f| %>
   <%= f.label :title%>
   <%= f.text_field :title %>
