--- a/23-authentication-authorization/movie_magic/app/assets/stylesheets/application.css
+++ b/23-authentication-authorization/movie_magic/app/assets/stylesheets/application.css
@@ -13,3 +13,38 @@
  *= require_tree .
  *= require_self
  */
+
+ ul li {
+  display: inline-block;
+  padding: 20px;
+  color: black;
+}
+
+li:hover {
+background-color: rgba(255, 0, 0, 0.5);
+transition-duration: 1s;
+}
+
+ul {
+  background-color: rgba(255, 255, 255, 0.7);
+
+  margin: 0px auto;
+  margin-bottom: 10px;
+  max-width: 960px;
+  /* padding: 1.25%;  */
+  width: 85%;
+  
+  /* font-family: molle; */
+  /* text-align: center; */
+  vertical-align: middle;
+  border-radius: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: black
+}
+
+.right {
+  float: right;
+}
