--- a/23-authentication-authorization/movie_magic/app/assets/stylesheets/movies.scss
+++ b/23-authentication-authorization/movie_magic/app/assets/stylesheets/movies.scss
@@ -47,7 +47,7 @@ img {
   -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
   box-shadow: 0 0 10px rgba(0,0,0,.3);
   margin: 0px auto;
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
   max-width: 960px;
   padding: 2.25%; 
   width: 85%;
