--- a/23-authentication-authorization/movie_magic/app/views/layouts/application.html.erb
+++ b/23-authentication-authorization/movie_magic/app/views/layouts/application.html.erb
@@ -21,7 +21,11 @@
         <li><%= link_to 'User Home', users_path %></li>
         <li><%= link_to 'Movie Home', movies_path %></li>
         <li><%= link_to 'New Movie', new_movie_path %></li>
-        <li class='right'><%= link_to 'Sign-in/Sign-up', new_user_path %></li>
+        <% if @logged_in_user %>
+          <li class='right'>Welcome <%= @logged_in_user.name %></li>
+        <% else %>
+          <li class='right'><%= link_to 'Sign-in/Sign-up', new_user_path %></li>
+        <% end %>
       </ul>
 
     <%= yield %>
