--- a/26-intro-to-the-dom/main.css
+++ b/26-intro-to-the-dom/main.css
@@ -27,7 +27,7 @@ main {
 
 /* responsive width */
 .container {
-  max-width: 100%;
+  max-width: 90%;
   margin: 0 auto;
 }
 
@@ -143,7 +143,7 @@ main {
   width: 100%;
 }
 
-@media (min-width: 400px) and (max-width: 699px) {
+@media (max-width: 699px) {
   .card {
     flex: 0 1 auto;
     margin: 1em 0;
